#2247 cleaned up some minor theme around the edges issues / spacing

--- a/core/dslmcode/shared/drupal-7.x/themes/elmsln_contrib/foundation_access/css/main.css
+++ b/core/dslmcode/shared/drupal-7.x/themes/elmsln_contrib/foundation_access/css/main.css
@@ -6584,7 +6584,12 @@ ul.dropdown-content li {
 .collapsible-body .elmsln-collapsible-body .a11y-textsize-controls a {
   display: inline-block;
   margin: 0;
-  padding: 0;
+  padding: .5rem;
+  border-radius: 4px;
+  border: 1px solid black;
+}
+.collapsible-body .elmsln-collapsible-body .a11y-textsize-controls a img {
+  margin-top:.25em;
 }
 
 .form-item .description {
@@ -8334,46 +8339,44 @@ lrnapp-fab-speed-dial-action.lrnapp-fab-speed-dial-action-0 {
 .user-drawer-block .user-details-text {
   display: inline-block;
 }
-paper-toast#toastdrawer {
+#toastdrawer {
+  padding: 0;
+  margin: 0;
+  z-index: 1000;
+  min-height: 10rem;
   bottom: 0;
   top: auto !important;
   max-height: 40vh !important;
   height: auto;
-  padding: 0;
 }
-paper-toast .close-button {
-  margin: 0 0 0 .5rem;
-  border-radius: 0;
-}
-
-paper-toast#toastdrawer .status-icon {
-  margin-right: .5rem;
-}
-
-paper-toast#toastdrawer .username {
-  display:inline-flex;
-  font-weight: bold;
-  text-decoration: underline;
-}
-
-paper-toast#toastdrawer .paper-toast-label {
-  position: absolute;
-  top:0;
-  left: 0;
-  background-color: #323232;
-  margin: -3rem 0 0 0;
-  padding: 0 0 0 .5rem;
-  font-size: 1rem;
-  font-weight: bold;
-  height: 3rem;
-}
-paper-toast#toastdrawer .alert-heading {
-  padding: .5rem;
-  margin: 0;
+.paper-toast-label {
+  background: #3bab97;
+  padding: 1em 2em;
+  color: white;
+  font-weight: 600;
 }
 .toast-content-container {
-  overflow: auto;
-  max-height: 40vh !important;
+  padding: 1em 2em;
+}
+#toastdrawer a {
+  color: #3bab97;
+}
+#toastdrawer h2 {
+  margin: 0;
+}
+#toastdrawer paper-button {
+  margin: 0;
+  color: rgba(255,255,255,0.85);
+  border-radius: 4px;
+  background: #41bea8;
+  font-weight: 900;
+  font-size: 1rem;
+  line-height: 1.7;
+  padding: 0.5rem 1.5rem;
+  box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.4);
+  right: 4px;
+  position: absolute;
+  top: 4px;
 }
 .alert-box {
   background-color: #FFB428;
@@ -8514,11 +8517,13 @@ paper-button#close-button.lrnsys-dialog {
   line-height: 2rem;
 }
 .elmsln--page--operations li.page-op-button app-drawer paper-button {
-  margin: 0;
-  padding: 0;
+  margin: -1em;
+  padding: 1em;
+  vertical-align: text-top;
+  height: 3.25em;
 }
 .elmsln--page--operations li.page-op-button app-drawer iron-icon {
-  margin: 0 .5rem 0 0;
+  margin: -1em .5em 0 0;
   padding: 0;
   line-height: unset;
   height: 3rem;
@@ -8707,7 +8712,6 @@ button.btn paper-button {
   background-color:#00C;
 }
 
-
 .content-callout-icon-left {
   width: 8rem;
   height: 11rem;
@@ -8723,6 +8727,24 @@ button.btn paper-button {
 /* Mathjax overrides */
 div.MathJax_Display {
   display: inline!important;
+}
+
+select.date-clear.form-select.initialized {
+  display: none;
+}
+
+.lrnsys-drawer-0 .drawer-header.lrnsys-drawer {
+  margin: 0;
+  padding: 0;
+}
+.app-drawer-0 #contentContainer.app-drawer {
+  margin-top: 7.5em;
+}
+
+#flyoutcontent #close-button {
+  position: absolute;
+  top: 0;
+  right: 0;
 }
 
 /**
